--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,12 @@
-
+/* body {
+    display: flex;
+    justify-content: center;
+} */
 
 .mapContainer {
-    width: 100%;
-    height: 100vh;
+    width: 50%;
+    height: 50vh;
 }
+
+
+
